bk_ida/gccida/c3/distribute_notes
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12553:4: error: expected ';' after expression
rtx v13; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12553:5: error: use of undeclared identifier 'v13'; did you mean 'v12'?
rtx v13; // rcx 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12552:18: note: 'v12' declared here
 struct rtx_def *v12; // r12 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12554:4: error: expected ';' after expression
rtx real_insn; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12554:5: error: use of undeclared identifier 'real_insn'; did you mean 'next_insn'?
rtx real_insn; // r14 
    ^~~~~~~~~
    next_insn
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/rtl.h:1347:12: note: 'next_insn' declared here
extern rtx next_insn                    PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12555:4: error: expected ';' after expression
rtx v15; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12555:5: error: use of undeclared identifier 'v15'; did you mean 'v12'?
rtx v15; // rbx 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12552:18: note: 'v12' declared here
 struct rtx_def *v12; // r12 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12562:4: error: expected ';' after expression
rtx reg_note; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12562:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // r15 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12565:4: error: expected ';' after expression
rtx v25; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12565:5: error: use of undeclared identifier 'v25'
rtx v25; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12566:4: error: expected ';' after expression
rtx v26; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12566:5: error: use of undeclared identifier 'v26'
rtx v26; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12570:4: error: expected ';' after expression
rtx v30; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12570:5: error: use of undeclared identifier 'v30'; did you mean 'v20'?
rtx v30; // rdx 
    ^~~
    v20
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12560:5: note: 'v20' declared here
int v20; // edx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12573:4: error: expected ';' after expression
rtx v33; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12573:5: error: use of undeclared identifier 'v33'
rtx v33; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12577:4: error: expected ';' after expression
rtx v37; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12577:5: error: use of undeclared identifier 'v37'
rtx v37; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/combine.c:12578:4: error: expected ';' after expression
rtx regno_note; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/distribute_notes/src/obj/combine.o] Error 1
